--- a/src/nehubaUI/templates/sass/theme.scss
+++ b/src/nehubaUI/templates/sass/theme.scss
@@ -154,32 +154,7 @@ div#ATLASContainer
 
 ul.darktheme.dropdown-menu
 {
-  background-color:gray(0.22);
 
-  li
-  {
-    &.dropdown-header
-    {
-      color:gray(0.7);
-    }
-
-    &.divider.dropdown-divider
-    {
-      background-color:gray(0.15);
-    }
-
-    .dropdown-item
-    {
-      color:gray(0.8);
-      position:relative;
-
-      &:hover
-      {
-        color:gray(0.9);
-        background-color:gray(0.25);
-      }
-    }
-  }
 }
 
 atlasbanner
@@ -289,9 +264,6 @@ WidgetsContainer
   {
     %widgetDarkTheme
     {
-      border-color:gray(0.35);
-      color:gray(0.95);
-      background-color:gray(0.2);
     }
     MinimisedContainer
     {
@@ -307,35 +279,11 @@ WidgetsContainer
       /**
        * required for blinking widget header. will not bleed into child panels
        */
-      div.panel.panel-success[floatingWidgetUnit],div.panel.panel-success[dockedWidgetUnit]
-      {
-        > div.panel-heading
-        {
-          background-color:rgba(0,20,0,0.5);
-        }
-      }
-
+       
       div.panel
       {
-        border:1px solid gray(0.35);
 
-        div.panel-heading
-        {
-          border-color:gray(0.35);
-          color:gray(1.0);
-          background-color:gray(0.25);
 
-          span
-          {
-            background-color:rgba(0,0,0,0);
-          }
-        }
-
-        .panel-body
-        {
-          border:none;
-          @extend %widgetDarkTheme;
-        }
 
         &.panel-success
         {
@@ -345,95 +293,9 @@ WidgetsContainer
           // }
         }
 
-        &.panel-warning
-        {
-          .btn.btn-block
-          {
-            border:1px solid rgba(250,235,204,0.5);
-          }
-        }
-
-        &.panel-danger
-        {
-          .btn.btn-block
-          {
-            border:1px solid rgba(235,204,209,0.5);
-          }
-        }
         
-      .table
-      {
-        @extend %widgetDarkTheme;
-
-        tr
-        {
-          @extend %widgetDarkTheme;
-          td
-          {
-            @extend %widgetDarkTheme;
-          }
-        }
-      }
       }
       
-      div.well
-      {
-        @extend %widgetDarkTheme;
-      }
-      .btn
-      {
-        @extend %widgetDarkTheme;
-        &.btn-primary
-        {
-          background-color:gray(0.35);
-        }
-        &.btn-success
-        {
-          border:1px solid rgba(214,233,198,0.5);
-        }
-        &.btn-warning
-        {
-          border:1px solid rgba(250,235,204,0.5);
-        }
-        &.btn-danger
-        {
-          border:1px solid rgba(235,204,209,0.5);
-        }
-        &:hover{
-          background-color:gray(0.35);
-        }
-      }
-      input, input[readonly]
-      {
-        @extend %widgetDarkTheme;
-      }
-      hr
-      {
-        border-top: 1px solid gray(0.3);
-      }
-      span
-      {
-        @extend %widgetDarkTheme;
-      }
-
-      .alert
-      {
-        border:none;
-        &.alert-danger
-        {
-          background-color:rgba(242,222,222,0.2);
-        }
-      }
-      
-      .popover
-      {
-        @extend %widgetDarkTheme;
-        .popover-title
-        {
-          @extend %widgetDarkTheme;
-          background-color:gray(0.3);
-        }
-      }
     }
   }
 }
